ported to 1.18